--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -46,7 +46,7 @@
         <tr class="section">
             <td class="final" colspan="2">Final Score</td>
             <td>{{ audit.weightPercentage }}</td>
-            <td></td>
+            <td>{{ audit.weight }}</td>
             <td></td>          
         </tr>
     </table>
