--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -18,10 +18,7 @@
         {% for section in audit.auditform.sections %}
 
         <tr class="section">
-            <td  class="field" colspan="2">Section {{ loop.index }}: {{ section.title }}</td>
-            <td>{{ section.weightPercentage }}</td>
-            <td>{{ section.weight }}</td>
-            <td></td>
+            <td  class="field" colspan="5">Section {{ loop.index }}: {{ section.title }}</td>
         </tr>
             {% for field in section.fields %}
                 
@@ -33,7 +30,12 @@
                         <td>{{ counter }}</td>
                         <td class="field">{{ field.title }}</td>
                         <td>{{ score.score }} - {{ score.weightPercentage }}</td>
-                        <td>{{ field.weight }}</td>
+                        <td>{% if field.fatal == true %}
+                                Involve Mgr
+                            {% else %}
+                                {{ field.weight }}
+                            {% endif %}
+                        </td>
                         <td class="field">{{ score.comment }}</td>
                     </tr>
 
@@ -42,6 +44,12 @@
                 {% endfor %}
             {% set counter = counter +1 %}
             {% endfor %}
+        <tr>
+            <td class="final" colspan="2">Section's Score</td>
+            <td>{{ section.weightPercentage }}</td>
+            <td>{{ section.weight }}</td>
+            <td></td>
+        </tr>
         {% endfor %}
         <tr class="section">
             <td class="final" colspan="2">Final Score</td>
