--- a/Resources/views/AuditForm/view.html.twig
+++ b/Resources/views/AuditForm/view.html.twig
@@ -19,7 +19,7 @@
         </thead>
         <tbody>
             {% for section in form.sections %}
-                <tr class="section">
+                <tr class="wgaudit-section">
                     <td colspan=2>Section {{section.id}}: {{ section.title }}</td>
                     <td colspan=2>{{ section.description }}</td>
                 </tr>
