--- a/Resources/views/AuditForm/list.html.twig
+++ b/Resources/views/AuditForm/list.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+    <h2>Listing Existing Forms:</h2>
+
     <table id="audit">
         <thead>
             <tr>
@@ -9,7 +11,7 @@
                 <th>Description</th>
                 <th>Is the form Active?</th>
                 <th></th>
-            </tr>        
+            </tr>
         </thead>
         <tbody>
             {% for form in forms %}
