--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -29,7 +29,7 @@
                 <tr>
                     <td>{{ counter }}</td>
                     <td class="wgaudit-field">{{ field.title }}</td>
-                    <td>{{ score.score }} - {{ score.weightPercentage }}</td>
+                    <td>{{ score.score }}</td>
                     <td>{% if field.fatal == true %}
                             Involve Mgr
                         {% else %}
